<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customNS="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.abhi.android.kycapp.custom.CameraSourcePreview
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.abhi.android.kycapp.custom.GraphicOverlay
                android:id="@+id/faceOverlay"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent" />

        </com.abhi.android.kycapp.custom.CameraSourcePreview>
    </LinearLayout>

    <com.abhi.android.kycapp.custom.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <com.abhi.android.kycapp.custom.OverlayView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        customNS:circular="false"
        />

    <ImageButton
        android:id="@+id/btn_takepicture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/camera_activity_click_button_bottom_margin"
        android:backgroundTint="@color/white"
        android:layout_gravity="center_horizontal|bottom"
        android:contentDescription="@string/take_picture"
        android:background="@drawable/ic_camera"/>


    <TextView
        android:id="@+id/powered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_spazer"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="@color/spazer_text_color"
        style="@style/TextStyle.Regular"

        />

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/chevron_back"
        android:layout_height="@dimen/chevron_back"
        android:layout_margin="25dp"
        android:background="@drawable/chevron_left"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/prev_page"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/kyc_screen_overlay_left_margin"
        android:layout_marginTop="@dimen/kyc_screen_text_top_margin"
        android:text="@string/please_hold_your_photoid_inside_the_box"
        android:textSize="28sp"
        android:textColor="@color/white"/>
</FrameLayout>
