<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <RelativeLayout
        android:layout_width="@dimen/dialog_size"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/oops"
            android:textColor="#ef5138"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/header"
            android:layout_margin="@dimen/activity_horizontal_margin_half"
            android:layout_marginLeft="@dimen/activity_horizontal_margin2"
            android:layout_marginRight="@dimen/activity_horizontal_margin2"
            android:background="#d2d2d2" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v1"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            style="@style/TextStyle.Regular"
            android:textColor="@color/project_grey_dark"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/facing_issue"
            android:textSize="@dimen/default_text_size" />


        <Button
            android:id="@+id/okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message"
            style="@style/TextStyle.Regular"
            android:paddingStart="@dimen/activity_horizontal_margin2"
            android:paddingEnd="@dimen/activity_horizontal_margin2"
            android:paddingTop="@dimen/regular_margin"
            android:paddingBottom="@dimen/regular_margin"
            android:background="@drawable/button_back"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/okay"
            android:textColor="@color/white" />

    </RelativeLayout>
</LinearLayout>